cmake_minimum_required(VERSION 3.14)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

### Language Examples ###
add_executable(E001_Swap src/examples/E001_Swap/main.cpp)
add_executable(E002_String src/examples/E002_String/stringConcat.cpp)
add_executable(E002_String_2 src/examples/E002_String/stringSort.cpp)
add_executable(E003_Vector src/examples/E003_Vector/main.cpp)
add_executable(E004_Reference src/examples/E004_Reference/main.cpp)
add_executable(E005_OOP src/examples/E005_OOP/main.cpp)
add_executable(E006_FriendFunction src/examples/E006_FriendFunction/main.cpp)
add_executable(E007_Inheritance src/examples/E007_Inheritance/main.cpp)
add_executable(E008_Inheritance src/examples/E008_Inheritance/main.cpp)
add_executable(E009_FileIO src/examples/E009_FileIO/main.cpp)
add_executable(E010_FileIO src/examples/E010_FileIO/main.cpp)
add_executable(E011_Inheritance src/examples/E011_Inheritance/main.cpp)
add_executable(E012_Inheritance src/examples/E012_Inheritance/main.cpp)
add_executable(E013_Aggregation src/examples/E013_Aggregation/main.cpp)
add_executable(E014_Polymorphism src/examples/E014_Polymorphism/main.cpp)
add_executable(E015_String src/examples/E015_String/main.cpp)
add_executable(E016_Overloading src/examples/E016_Overloading/main.cpp)
add_executable(E017_Overloading src/examples/E017_Overloading/main.cpp)
add_executable(E018_FriendFunction src/examples/E018_FriendFunction/main.cpp)
add_executable(E019_Exception src/examples/E019_Exception/main.cpp)
add_executable(E020_Template src/examples/E020_Template/main.cpp)
add_executable(E021_QuickSort src/examples/E021_QuickSort/main.cpp)
add_executable(E022_Template src/examples/E022_Template/main.cpp)
add_executable(E023_Namespace src/examples/E023_Namespace/main.cpp)
add_executable(E024_AbstractClass src/examples/E024_AbstractClass/main.cpp)
add_executable(E025_Matrix src/examples/E025_Matrix/main.cpp)
add_executable(E026_VirtualFunction src/examples/E026_VirtualFunction/main.cpp)
add_executable(E027_MemoryAllocation src/examples/E027_MemoryAllocation/main.cpp)
add_executable(E028_ArraySize src/examples/E028_ArraySize/main.cpp)
add_executable(E029_StringTokenizing src/examples/E029_StringTokenizing/main.cpp)
add_executable(E030_ReverseWords src/examples/E030_ReverseWords/main.cpp)
add_executable(E031_Practice src/examples/E031_Practice/main.cpp)
add_executable(E032_Const src/examples/E032_Const/main.cpp)
add_executable(E033_Reference src/examples/E033_Reference/main.cpp)
add_executable(E034_SmartPointers src/examples/E034_SmartPointers/main.cpp)
add_executable(E035_ImplicitConversion src/examples/E035_ImplicitConversion/main.cpp)
add_executable(E036_ObjectCreating src/examples/E036_ObjectCreating/main.cpp)
add_executable(E037_FunctionPointers src/examples/E037_FunctionPointers/main.cpp)
add_executable(E038_LambdaFunctions src/examples/E038_LambdaFunctions/main.cpp)
add_executable(E039_OperatorOverloading src/examples/E039_OperatorOverloading/main.cpp)
add_executable(E040_OperatorOverloading src/examples/E040_OperatorOverloading/main.cpp)
add_executable(E041_OperatorOverloading src/examples/E041_OperatorOverloading/main.cpp)
add_executable(E042_OperatorOverloading src/examples/E042_OperatorOverloading/main.cpp)
add_executable(E043_OperatorOverloading src/examples/E043_OperatorOverloading/main.cpp)
add_executable(E044_OperatorOverloading src/examples/E044_OperatorOverloading/main.cpp)
add_executable(E045_OperatorOverloading src/examples/E045_OperatorOverloading/main.cpp)
add_executable(E046_Threads src/examples/E046_Threads/main.cpp)
add_executable(E047_Time src/examples/E047_Time/main.cpp)
add_executable(E048_Sorting src/examples/E048_Sorting/main.cpp)
add_executable(E049_SmartPointers src/examples/E049_SmartPointers/main.cpp)
add_executable(E050_UniquePointer src/examples/E050_UniquePointer/main.cpp)



### Coding practices
add_executable(P001_MinMax src/practice/P001_MinMax/main.cpp)
add_executable(P002_MergeSort src/practice/P002_MergeSort/main.cpp)
add_executable(P003_Stack src/practice/P003_Stack/main.cpp)



### STL Examples ###
add_executable(E001_AllOf src/stl/E001_AllOf/main.cpp)
add_executable(E002_AdjacentFind src/stl/E002_AdjacentFind/main.cpp)
add_executable(E003_AnyOf src/stl/E003_AnyOf/main.cpp)
add_executable(E004_NoneOf src/stl/E004_NoneOf/main.cpp)
add_executable(E005_ForEach src/stl/E005_ForEach/main.cpp)
add_executable(E006_Find src/stl/E006_Find/main.cpp)
add_executable(E007_FindIf src/stl/E007_FindIf/main.cpp)
add_executable(E008_FindIfNot src/stl/E008_FindIfNot/main.cpp)
add_executable(E009_FindEnd src/stl/E009_FindEnd/main.cpp)
add_executable(E010_FindFirstOf src/stl/E010_FindFirstOf/main.cpp)
add_executable(E011_Count src/stl/E011_Count/main.cpp)
add_executable(E012_CountIf src/stl/E012_CountIf/main.cpp)